Fix too big shadow of field warning decoration
When the field is highlighted by warning validation decoration, it's
shadow is too big.

This patch reduces warning decoration shadow radius from 14 to 2.

--- a/src/main/resources/css/validation.css
+++ b/src/main/resources/css/validation.css
@@ -1,9 +1,5 @@
-.error {
-    -fx-effect: dropshadow(three-pass-box, darkred, 7.0, 0.0, 0.0, 0.0);
-}
-
-.warning {
-    -fx-effect: dropshadow(three-pass-box, gold, 14.0, 0.0, 0.0, 0.0);
+.cutewarning {
+    -fx-effect: dropshadow(three-pass-box, gold, 2.0, 0.0, 0.0, 0.0);
 }
 
 .cuteerror {
